--- a/coursera.ipynb
+++ b/coursera.ipynb
@@ -463,6 +463,131 @@
     "\n",
     "list.index(x)          Tells you the position of the first x in the list."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec06e64e-35bb-4846-a011-82ac1981fae6",
+   "metadata": {},
+   "source": [
+    "Excellent! That's correct. You've defined the function header with parameters for length and width.\n",
+    "\n",
+    "You are now 50% complete.\n",
+    "\n",
+    "Now, let's focus on what goes *inside* the function. How would you calculate the area of a rectangle using the `length` and `width` parameters, and how would you tell the function to return that calculated area?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1ef4ca0a-dce2-4673-9b8d-7296d02c20bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_area_rectangle(length, width):\n",
+    "    \"\"\"Calculates the area of a rectangle.\n",
+    "\n",
+    "      Args:\n",
+    "        length: The length of the rectangle.\n",
+    "        width: The width of the rectangle.\n",
+    "\n",
+    "      Returns:\n",
+    "        The area of the rectangle.\n",
+    "    \"\"\"\n",
+    "    area = length * width\n",
+    "    return area\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4fc9629-ece5-4bcf-96d6-8777f86e5cc3",
+   "metadata": {},
+   "source": [
+    "Practice\n",
+    "\n",
+    "Simple Calculator input(), operators print()\n",
+    "\n",
+    "input validation using len() and type() to validate password input\n",
+    "\n",
+    "script converting data int(), Float(), str() complete operator on each type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1987c24b-b039-4df7-ab88-1d85019884ae",
+   "metadata": {},
+   "source": [
+    "Exercise 1: Analyzing Antarctic Temperatures  \n",
+    "Instructions:\n",
+    "Begin with the antarctic_temperatures list, which contains the daily temperature recordings.\n",
+    "\n",
+    "Apply the max() function to the antarctic_temperatures list to obtain the highest temperature recorded.\n",
+    "\n",
+    "Apply the min() function on the antarctic_temperatures list to determine the lowest temperature recorded.\n",
+    "\n",
+    "Print the highest and lowest temperatures.\n",
+    "\n",
+    "Calculate the average temperature by summing all temperatures in the antarctic_temperatures list using the sum() function and dividing by the number of temperatures, which you can determine using the len() function. Round the calculated average temperature to one decimal place using the round() function.\n",
+    "\n",
+    "Print the rounded average temperature.\n",
+    "\n",
+    "Calculate the absolute value of the coldest temperature using the abs() function.\n",
+    "\n",
+    "Print the absolute value of the coldest temperature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5af53f00-7fac-41fa-9a0a-ecd15943a941",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highest temperature: -23.8 °C\n",
+      "Lowest temperature: -29.2 °C\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'avg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLowest temperature:\u001b[39m\u001b[38;5;124m\"\u001b[39m, lowest_temp, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m°C\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Calculate the average temperature\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m average_temp \u001b[38;5;241m=\u001b[39m \u001b[43mavg\u001b[49m(antarctic_temperatures)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAverage temperature:\u001b[39m\u001b[38;5;124m\"\u001b[39m, average_temp, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m°C\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Find the absolute value of the coldest temperature\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'avg' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "antarctic_temperatures = [-25.5, -28.0, -26.3, -23.8, -27.1, -24.9, -29.2]\n",
+    "\n",
+    "# Find the highest and lowest temperatures\n",
+    "highest_temp = max(antarctic_temperatures)\n",
+    "lowest_temp = min(antarctic_temperatures)\n",
+    "\n",
+    "print(\"Highest temperature:\", highest_temp, \"°C\")\n",
+    "print(\"Lowest temperature:\", lowest_temp, \"°C\")\n",
+    "\n",
+    "# Calculate the average temperature\n",
+    "average_temp = avg(antarctic_temperatures)\n",
+    "print(\"Average temperature:\", average_temp, \"°C\")\n",
+    "\n",
+    "# Find the absolute value of the coldest temperature\n",
+    "coldest_temp_abs = antarctic_temperatures ### Insert code here\n",
+    "print(\"The coldest temperature was\", coldest_temp_abs, \"°C below freezing.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bc7bd34-aac9-45bb-8013-839a1d395cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
