Added PYTC1M3P01_Activity_ Experimentingwithbuilt-infunctions_SOLUTION.ipynb, Modified coursera.ipynb
- Added files: PYTC1M3P01_Activity_
Experimentingwithbuilt-infunctions_SOLUTION.ipynb
- Modified files: coursera.ipynb

--- a/coursera.ipynb
+++ b/coursera.ipynb
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "5af53f00-7fac-41fa-9a0a-ecd15943a941",
    "metadata": {},
    "outputs": [
@@ -547,18 +547,9 @@
      "output_type": "stream",
      "text": [
       "Highest temperature: -23.8 °C\n",
-      "Lowest temperature: -29.2 °C\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'avg' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLowest temperature:\u001b[39m\u001b[38;5;124m\"\u001b[39m, lowest_temp, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m°C\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Calculate the average temperature\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m average_temp \u001b[38;5;241m=\u001b[39m \u001b[43mavg\u001b[49m(antarctic_temperatures)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAverage temperature:\u001b[39m\u001b[38;5;124m\"\u001b[39m, average_temp, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m°C\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Find the absolute value of the coldest temperature\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'avg' is not defined"
+      "Lowest temperature: -29.2 °C\n",
+      "Average temperature: -26.4 °C\n",
+      "The coldest temperature was 29.2 °C below freezing.\n"
      ]
     }
    ],
@@ -573,11 +564,11 @@
     "print(\"Lowest temperature:\", lowest_temp, \"°C\")\n",
     "\n",
     "# Calculate the average temperature\n",
-    "average_temp = avg(antarctic_temperatures)\n",
+    "average_temp = round(sum(antarctic_temperatures) / len(antarctic_temperatures), 1)\n",
     "print(\"Average temperature:\", average_temp, \"°C\")\n",
     "\n",
     "# Find the absolute value of the coldest temperature\n",
-    "coldest_temp_abs = antarctic_temperatures ### Insert code here\n",
+    "coldest_temp_abs = abs(min(antarctic_temperatures)) \n",
     "print(\"The coldest temperature was\", coldest_temp_abs, \"°C below freezing.\")"
    ]
   },
@@ -585,6 +576,109 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5bc7bd34-aac9-45bb-8013-839a1d395cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2.\n",
+    "Question 2\n",
+    "String Shenanigans: Fun with Python Built-in String Functions\n",
+    "Exercise 1: String Length and Case Conversion\n",
+    "Instructions:\n",
+    "Start with the provided variables sentence1 and sentence2, which contain the two humorous sentences.\n",
+    "\n",
+    "Use the len() function to calculate the number of characters in sentence1 and sentence2\n",
+    "\n",
+    "Apply the upper() function to sentence1 to convert all its characters to uppercase.\n",
+    "\n",
+    "Apply the lower() function to transform all the characters in sentence2 to lowercase. \n",
+    "\n",
+    "Print the results. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dbf84a26-4ca6-4a27-bfe3-87fa4f5b0e36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of sentence 1: 67\n",
+      "Length of sentence 2: 66\n",
+      "Uppercase sentence 1: I'M READING A BOOK ABOUT ANTI-GRAVITY. IT'S IMPOSSIBLE TO PUT DOWN!\n",
+      "Lowercase sentence 2: why don't scientists trust atoms? because they make up everything!\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence1 = \"I'm reading a book about anti-gravity. It's impossible to put down!\"\n",
+    "sentence2 = \"Why don't scientists trust atoms? Because they make up everything!\"\n",
+    "\n",
+    "# Find the length of each sentence\n",
+    "length_sentence1 = len(sentence1) \n",
+    "length_sentence2 = len(sentence2) \n",
+    "\n",
+    "print(\"Length of sentence 1:\", length_sentence1)\n",
+    "print(\"Length of sentence 2:\", length_sentence2)\n",
+    "\n",
+    "# Convert case\n",
+    "uppercase_sentence1 = str.upper(sentence1) \n",
+    "lowercase_sentence2 = str.lower(sentence2) \n",
+    "\n",
+    "print(\"Uppercase sentence 1:\", uppercase_sentence1)\n",
+    "print(\"Lowercase sentence 2:\", lowercase_sentence2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f1041d8-658a-497b-b5e3-61568e705c6b",
+   "metadata": {},
+   "source": [
+    "Exercise 2: Replacing Words and Splitting Sentences\n",
+    "Instructions\n",
+    "Start with the provided variables sentence1 and sentence2, which already contain the two humorous sentences.\n",
+    "\n",
+    "Use the replace() function to replace the word \"impossible\" in sentence1 with the word \"challenging\". \n",
+    "\n",
+    "Use the split() function to divide sentence2 into a list of individual words. \n",
+    "\n",
+    "Print the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "712adea6-77a5-43fd-86f1-6771b97739c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified sentence 1: I'm reading a book about anti-gravity. It's challenging to put down!\n",
+      "Words in sentence 2: ['Why', \"don't\", 'scientists', 'trust', 'atoms?', 'Because', 'they', 'make', 'up', 'everything!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence1 = \"I'm reading a book about anti-gravity. It's impossible to put down!\"\n",
+    "sentence2 = \"Why don't scientists trust atoms? Because they make up everything!\"\n",
+    "\n",
+    "# Replace a word in sentence1\n",
+    "modified_sentence1 = sentence1 \n",
+    "print(\"Modified sentence 1:\", str.replace(modified_sentence1, 'impossible', 'challenging'))\n",
+    "\n",
+    "# Split sentence2 into a list of words\n",
+    "words_list = str.split(sentence2)\n",
+    "print(\"Words in sentence 2:\", words_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "512dbb1c-848a-47d6-90cd-60fa82aa665b",
    "metadata": {},
    "outputs": [],
    "source": []
