--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "d4655779-21ed-4a60-8d8f-26dd32e84d4c",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "import csv\n",
     "\n",
     "def json_to_csv(json_file_path, csv_file_path):\n",
+    "    \n",
     "    data = []\n",
     "    with open(json_file_path, 'r') as json_file:\n",
     "        for line in json_file:\n",
@@ -40,8 +41,8 @@
     "                    del item['_source']\n",
     "                writer.writerow(item)\n",
     "\n",
-    "json_file_path = 'Access.json'\n",
-    "csv_file_path = 'Hajaaccess.csv'\n",
+    "json_file_path = 'Outbound.json'\n",
+    "csv_file_path = 'HajaOutbound.csv'\n",
     "json_to_csv(json_file_path, csv_file_path)\n"
    ]
   },
@@ -49,6 +50,61 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "44996905-3337-46d6-94e6-5d53eb8e5124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def json_to_csv(json_file_path, csv_file_path):\n",
+    "    \"\"\"\n",
+    "    Convert a JSON file to a CSV file.\n",
+    "\n",
+    "    This function reads a JSON file containing a list of dictionaries, processes the data,\n",
+    "    and writes it to a CSV file. If the JSON data contains a dictionary field named '_source',\n",
+    "    each key-value pair in '_source' is flattened into separate fields in the CSV, with field names\n",
+    "    prefixed by '_source_'.\n",
+    "\n",
+    "    Parameters:\n",
+    "    json_file_path (str): The path to the input JSON file.\n",
+    "    csv_file_path (str): The path to the output CSV file.\n",
+    "\n",
+    "    Example:\n",
+    "    json_file_path = 'input.json'\n",
+    "    csv_file_path = 'output.csv'\n",
+    "    json_to_csv(json_file_path, csv_file_path)\n",
+    "    \"\"\"\n",
+    "    data = []\n",
+    "    with open(json_file_path, 'r') as json_file:\n",
+    "        for line in json_file:\n",
+    "            data.append(json.loads(line.strip()))\n",
+    "\n",
+    "    if len(data) > 0:\n",
+    "        # Dynamically collect all keys\n",
+    "        all_keys = set()\n",
+    "        for item in data:\n",
+    "            all_keys.update(item.keys())\n",
+    "        \n",
+    "        # Handle the special case for the _source field\n",
+    "        if '_source' in all_keys:\n",
+    "            all_keys.remove('_source')\n",
+    "            sample_item = data[0]\n",
+    "            if '_source' in sample_item:\n",
+    "                for key in sample_item['_source'].keys():\n",
+    "                    all_keys.add(f'_source_{key}')\n",
+    "        \n",
+    "        with open(csv_file_path, 'w', newline='') as csv_file:\n",
+    "            writer = csv.DictWriter(csv_file, fieldnames=all_keys)\n",
+    "            writer.writeheader()\n",
+    "            for item in data:\n",
+    "                if '_source' in item:\n",
+    "                    for key, value in item['_source'].items():\n",
+    "                        item[f'_source_{key}'] = value\n",
+    "                    del item['_source']\n",
+    "                writer.writerow(item)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2b84c31-735d-4c24-a986-7e6bad19c37d",
    "metadata": {},
    "outputs": [],
    "source": []
