--- a/coursera.ipynb
+++ b/coursera.ipynb
@@ -676,9 +676,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6fcaefd8-c5e8-4a90-a14e-c19c6ef2b748",
+   "metadata": {},
+   "source": [
+    "Your task:\n",
+    "Create a Python class named Dog.\n",
+    "\n",
+    "Define two attributes within the Dog class: name (a string to store the dog's name) and breed (a string to store the dog's breed).\n",
+    "\n",
+    "Implement a method named bark() within the Dog class. This method should print a message to the console that includes the dog's name and breed, something like: \"Woof! My name is [name] and I'm a [breed].\"\n",
+    "\n",
+    "Create an instance (object) of the Dog class, name it my_dog, \n",
+    "\n",
+    "Using the my_dog variable instance. call the bark() method, providing the name Buddy and the breed Golden Retriever to see it in action!\n",
+    "\n",
+    "Tips:\n",
+    "Remember to use the __init__ method to initialize the name and breed attributes when creating a new Dog object.\n",
+    "\n",
+    "Within the bark() method, use self.name and self.breed to access the dog's attributes.\n",
+    "\n",
+    "Example input:\n",
+    "my_dog = Dog(\"Buddy\", \"Golden Retriever\")\n",
+    "\n",
+    "my_dog.bark()\n",
+    "\n",
+    "Expected output:\n",
+    "Woof! My name is Buddy and I'm a Golden Retriever."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cf81e657-2cf2-476d-b45a-762e711afcb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof! My name is Odin and I am a German Shepherd.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, breed):\n",
+    "        self.name = name\n",
+    "        self.breed = breed\n",
+    "    def bark(self):\n",
+    "        print(f\"Woof! My name is {self.name} and I am a {self.breed}.\")\n",
+    "\n",
+    "my_dog = Dog(\"Odin\" , \"German Shepherd\")\n",
+    "my_dog.bark()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "512dbb1c-848a-47d6-90cd-60fa82aa665b",
+   "id": "ef55a987-8ff2-4afb-b077-3976738447bd",
    "metadata": {},
    "outputs": [],
    "source": []
