--- a/coursera.ipynb
+++ b/coursera.ipynb
@@ -732,9 +732,237 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8237415f-2ced-47dd-804c-64614c4db96f",
+   "metadata": {},
+   "source": [
+    "Functional code block: The circle's measure\n",
+    "Your task:\n",
+    "Write a Python function using a precise descriptive name like calculate_diameter_circle while also incorporating snake case.\n",
+    "\n",
+    "The function should take one argument: radius (with type hints).\n",
+    "\n",
+    "It should calculate the diameter of a circle (diameter = radius * 2).\n",
+    "\n",
+    "Include a clear and informative docstring explaining the function's purpose, arguments, and return value, also using type hints.\n",
+    "\n",
+    "Handle potential errors: If the radius is negative, raise a ValueError with an appropriate message.\n",
+    "\n",
+    "Tips:\n",
+    "Follow the naming convention guidance (snake_case).\n",
+    "\n",
+    "Make sure your docstring is well-formatted and easy to understand, including type hints.\n",
+    "\n",
+    "Keep your function concise and focused.\n",
+    "\n",
+    "Avoid any side effects.\n",
+    "\n",
+    "Use try-except blocks to handle exceptions gracefully.\n",
+    "\n",
+    "Example input:\n",
+    "With the value radius = 7.\n",
+    "\n",
+    "With edge cases like radius = 0, radius = -3, and a large value like radius = 1000000.\n",
+    "\n",
+    "Expected output:\n",
+    "Radius: 7, Diameter: 14\n",
+    "\n",
+    "Radius: 0, Diameter: 0\n",
+    "\n",
+    "Radius: -3, Error: Radius cannot be negative.\n",
+    "\n",
+    "Radius: 1000000, Diameter: 2000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "91480a65-55a6-4a1f-8f06-6d292395218b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Radius cannot be negative.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 25\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m     23\u001b[0m          \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRadius: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mradius\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 25\u001b[0m \u001b[43mcalculate_diameter_circle\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m100000000000000\u001b[39;49m\u001b[43m)\u001b[49m                        \n",
+      "Cell \u001b[0;32mIn[17], line 16\u001b[0m, in \u001b[0;36mcalculate_diameter_circle\u001b[0;34m(radius)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03mCalculates the diameter of a circle.\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;124;03m    4\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m radius \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 16\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRadius cannot be negative.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     19\u001b[0m     diameter \u001b[38;5;241m=\u001b[39m radius \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m\n",
+      "\u001b[0;31mValueError\u001b[0m: Radius cannot be negative."
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_diameter_circle(radius: float):\n",
+    "    \"\"\"\n",
+    "    Calculates the diameter of a circle.\n",
+    "\n",
+    "    Args:\n",
+    "        radius: the distance from the center of the circle to the edge (float).\n",
+    "    Returns:\n",
+    "        The diameter of a circle (float).\n",
+    "    Raises:\n",
+    "        ValueError: If the radius is negative \n",
+    "    Example:\n",
+    "        >>> calculate_diamter_circle(2)\n",
+    "        4\n",
+    "    \"\"\"\n",
+    "    if radius < 0:\n",
+    "        raise ValueError(\"Radius cannot be negative.\")\n",
+    "    try:\n",
+    "        \n",
+    "        diameter = radius * 2\n",
+    "        print(f\"Radius: {radius}, Diameter: {diameter}\")\n",
+    "        return diameter\n",
+    "    except ValueError as e:\n",
+    "         print(f\"Radius: {radius}, Error: {e}\")\n",
+    "    \n",
+    "calculate_diameter_circle(-100000000000000)                        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0afc291-0ed8-4da8-99b7-2e02bf203979",
+   "metadata": {},
+   "source": [
+    "Instructions:\n",
+    "In this example, you will write a function that takes no parameters and will display a standard message. \n",
+    "\n",
+    "The starting code has a call to a function, happy_birthday, that you will be writing.\n",
+    "\n",
+    "Write the function definition for the function, happy_birthday, which takes no parameters (1 line of code).\n",
+    "\n",
+    "The function should print Happy Birthday! to the user (1 line of code). The function should not return a value. \n",
+    "\n",
+    "Run the program. The program will always display the same message.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dc832a9d-9080-470f-80ab-68326bfc049c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Happy Birthday!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def happy_birthday():\n",
+    "    print(\"Happy Birthday!\")\n",
+    "\n",
+    "happy_birthday()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d173da96-60ac-4fb8-b555-b625ef6b65f4",
+   "metadata": {},
+   "source": [
+    "Instructions\n",
+    "In this example, you will write a function that takes two parameters and will display a customized message. \n",
+    "\n",
+    "The starting code has a call to a function, happy_birthday, that you will be writing.\n",
+    "\n",
+    "Write the function definition for the function, happy_birthday, which takes two parameters, one named age and one named name (1 line of code).\n",
+    "\n",
+    "The function should print Happy Birthday <name> and congratulations on turning <age> years old! to the user (1 line of code). For example, if you pass the values 22 for age and Nora for name, the program should display Happy Birthday Nora and congratulations on turning 22 years old! The function should not return a value.\n",
+    "\n",
+    "Run the program. As it is currently written, it will always display the same message, but it could be modified to accept input instead of always using the same values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8d06b8d6-ed6c-4f56-aa7f-0f1d8eff468a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Happy Birthday Nora and congratulations on turning 22 years old!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def happy_birthday(age , name):\n",
+    "    print(f\"Happy Birthday {name} and congratulations on turning {age} years old!\")\n",
+    "\n",
+    "happy_birthday(22, \"Nora\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c9553d0-78a5-4118-a2e8-d6e037f73396",
+   "metadata": {},
+   "source": [
+    "Question 3\n",
+    "Exercise 3: No Parameters, but a Return Value\n",
+    "Instructions\n",
+    "In this example, you will create a function to generate a lucky number. By declaring it as a function, this code can be re-used in other parts of the program. By having the definition in one place, it would allow you to change the functionality in many places by changing one line in the function.\n",
+    "\n",
+    "Begin by writing the function definition for a get_lucky_number function. Remember, this function should not require any input parameters (one line of code).\n",
+    "\n",
+    "The function should then return the value of lucky_num (one line of code). The value has already been loaded; your task is to return the value to the main program.\n",
+    "\n",
+    "Run the program. A random number will be generated in the range (1 to 100, as defined in the function). This allows the logic to be written once and re-used many times in the program."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "82a90dba-40e2-4eba-a714-eb44fe1f62fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your lucky number is: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def  get_lucky_number():\n",
+    "  lucky_num = random.randint(1,100)\n",
+    "  return lucky_num\n",
+    "\n",
+    "# Get a lucky number between 1 and 100\n",
+    "lucky_number = get_lucky_number()\n",
+    "\n",
+    "print(\"Your lucky number is:\", lucky_number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e77a992c-f1fc-4edb-b0f7-8d43547d049d",
+   "metadata": {},
+   "source": [
+    "Instructions\n",
+    "In this example, you will write a function to calculate the discounted total based on whether a user is a member of the discount club or not.\n",
+    "\n",
+    "Begin by writing the function definition for the calc_sale_price function. This function will accept two input parameters (one line of code). The first, amount, is a number representing the amount of purchase. The second, member, is a boolean variable representing whether the user is a member (True) or not (False).\n",
+    "\n",
+    "Round amount to two decimal places using the built-in function round.\n",
+    "\n",
+    "The function should then return the value of amount. \n",
+    "\n",
+    "Run the code. The discounted amounts will be displayed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef55a987-8ff2-4afb-b077-3976738447bd",
+   "id": "32b1c7a6-2020-4844-8760-307853405abb",
    "metadata": {},
    "outputs": [],
    "source": []
