--- a/coursera.ipynb
+++ b/coursera.ipynb
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "8d06b8d6-ed6c-4f56-aa7f-0f1d8eff468a",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
     }
    ],
    "source": [
-    "def happy_birthday(age , name):\n",
+    "def happy_birthday(age,name):\n",
     "    print(f\"Happy Birthday {name} and congratulations on turning {age} years old!\")\n",
     "\n",
     "happy_birthday(22, \"Nora\")"
@@ -932,7 +932,7 @@
    "source": [
     "import random\n",
     "\n",
-    "def  get_lucky_number():\n",
+    "def get_lucky_number():\n",
     "  lucky_num = random.randint(1,100)\n",
     "  return lucky_num\n",
     "\n",
@@ -961,8 +961,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "32b1c7a6-2020-4844-8760-307853405abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Member price: 127.92\n",
+      "Non-member price: 142.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_sale_price(amount,member): \n",
+    "\tif member:\n",
+    "\t\t# Members receive a 15% discount (0.15)\n",
+    "\t\tamount = amount - (amount * 0.15)\n",
+    "\telse:\n",
+    "\t\t# Non-members get a 5% discount (0.05)\n",
+    "\t\tamount = amount - (amount * 0.05)\n",
+    "\n",
+    "\t# Round amount to two decimal places\n",
+    "\tamount = round(amount , 2) # Insert code here\n",
+    "\n",
+    "\t# Return amount to the main program\n",
+    "\treturn amount\n",
+    "\n",
+    "# Example price (already provided)\n",
+    "full_price = 150.50\n",
+    "\n",
+    "# Call function for members\n",
+    "member_price = calc_sale_price(full_price, True)\n",
+    "print(\"Member price:\",member_price)\n",
+    "\n",
+    "# Call function for non-members\n",
+    "non_member_price = calc_sale_price(full_price, False)\n",
+    "print(\"Non-member price:\",non_member_price)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc160a08-daf0-4c6c-8489-58981520db61",
+   "metadata": {},
+   "source": [
+    "Instructions\n",
+    "In this example, you will explore the concept of scope.\n",
+    "\n",
+    "1. Run the code below and note the error. The first function call, display_color_works(), will successfully run. The second, display_color_failure(), will result in a NameError.\n",
+    "\n",
+    "2. There are a few ways to correct this. \n",
+    "\n",
+    "     a. One way is to comment out the line calling the display_color_failure. This does not fix the problem, but it avoids the error.\n",
+    "\n",
+    "     b. The preferred way is to set the shirt_color outside of the display_color_works function, in the main program, and pass the value to both functions.\n",
+    "\n",
+    "     c. A third way is to catch the error using a try/catch block.\n",
+    "\n",
+    "     d. A fourth way is to declare the variable as a global variable, but as discussed in an earlier reading, this is considered bad practice.\n",
+    "\n",
+    "3. Comment out the call to the display_color_failure function and re-run the program. Verify the error disappears.   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e2a1976d-8c12-45ff-b853-9236c72da493",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First shirt color is: Pink\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display_color_failure():\n",
+    "  # Try to access 'color' directly (this will cause an error)\n",
+    "  print(\"Your shirt color is:\", shirt_color)\n",
+    "\n",
+    "def display_color_works():\n",
+    "  shirt_color = \"Pink\"\n",
+    "  print(\"First shirt color is:\", shirt_color)\n",
+    "\n",
+    "# The shirt_color variable is in scope in this function\n",
+    "display_color_works()\n",
+    "\n",
+    "# The shirt_color variable is not in scope in this function\n",
+    "# display_color_failure()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca0c8ee6-3736-4051-8df2-1c6fc5d5974a",
+   "metadata": {},
+   "source": [
+    "Instructions\n",
+    "In this example, you will examine using functions from another module.\n",
+    "\n",
+    "You have created a file named menus.py stored in the same folder as your current program. This module contains a function, display_menu, that has been written. It takes no arguments and returns a numeric value.\n",
+    "\n",
+    "Import the menus module to make the contents available to your program.\n",
+    "\n",
+    "Enter the code to call the display_menu module in the menus module. The result will be saved in the user_choice variable.\n",
+    "\n",
+    "This code will not work without the menus.py file. If it were there, in the future, another programmer can modify the menus module independently of your code, and your program will benefit from the latest update."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2f0bed7d-026a-4816-8cf9-089c3d8096e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'menus'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# import the menus module\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmenus\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Call the display_menu function in the menus module\u001b[39;00m\n\u001b[1;32m      5\u001b[0m user_choice \u001b[38;5;241m=\u001b[39m menus\u001b[38;5;241m.\u001b[39mdisplay_menu() \u001b[38;5;66;03m# Insert code here\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'menus'"
+     ]
+    }
+   ],
+   "source": [
+    "# import the menus module\n",
+    "import menus\n",
+    "\n",
+    "# Call the display_menu function in the menus module\n",
+    "user_choice = menus.display_menu() # Insert code here\n",
+    "print(user_choice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26919bda-cca9-4bf7-ac51-832bc743b595",
    "metadata": {},
    "outputs": [],
    "source": []
