--- a/module_4.ipynb
+++ b/module_4.ipynb
@@ -104,10 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e33898c0-02c6-4733-b906-25ec0fc6d0a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The price of Widget A is $19.99\n"
+     ]
+    }
+   ],
    "source": [
     "product_catalog = {\n",
     "    \"SKU123\": {\n",
@@ -131,10 +139,24 @@
     "    if sku in product_catalog:\n",
     "        product_name = product_catalog[sku][\"name\"]\n",
     "        product_price = product_catalog[sku][\"price\"]\n",
-    "        print(f\"The price of {product_name} is {product_price:.2f}\")\n",
+    "        print(f\"The price of {product_name} is ${product_price:.2f}\")\n",
     "    else:\n",
-    "        print(\"SKU not found in the product catalog.\")"
+    "        print(\"SKU not found in the product catalog.\")\n",
+    "\n",
+    "# Example input\n",
+    "sku_to_retrieve = \"SKU123\"\n",
+    "\n",
+    "# Retrieve and print the price of the specific product\n",
+    "get_price(sku_to_retrieve)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb78045b-08f9-49ca-b90d-31752ff09c38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
