Added 2 files, Modified module_5_error_handling.ipynb
- Added files: Untitled1.ipynb, traci.md
- Modified files: module_5_error_handling.ipynb

--- a/module_5_error_handling.ipynb
+++ b/module_5_error_handling.ipynb
@@ -74,12 +74,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5707d717-ea94-4178-a363-c4982effdff1",
+   "metadata": {},
+   "source": [
+    "Functional code challenge: Safe file reading\n",
+    "Task:\n",
+    "Write a Python function named read_file_contents that takes file_path as an argument.\n",
+    "\n",
+    "Inside the function, use a try-except block to attempt to open the file, read its contents, and print them to the console.\n",
+    "\n",
+    "Handle the FileNotFoundError specifically by printing an appropriate error message if the file doesn't exist.\n",
+    "\n",
+    "Tips:\n",
+    "Use the  with open() statement, which ensures that the file is closed automatically, so calling file.close() in the finally block won’t be necessary.\n",
+    "\n",
+    "Example Input:\n",
+    "read_file_contents(\"/Users/Example/Documents/my_file.txt\")\n",
+    "\n",
+    "Expected output:\n",
+    "Error: File not found - /Users/Example/Documents/my_file.txt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "008bf3d2-d2dc-4435-999e-c0e13191794d",
+   "id": "12a1054e-c0c4-43db-9e3e-20a7be6ab00c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_file_contents(file_path):\n",
+    "    \"\"\"Reads and prints the contents of a file, handling potential errors gracefully.\"\"\"\n",
+    "    try:\n",
+    "        with open(file_path, 'r') as file:\n",
+    "            contents = file.read()\n",
+    "            print(contents)\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: File not found - {file_path}\")\n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
