--- a/module_5_error_handling.ipynb
+++ b/module_5_error_handling.ipynb
@@ -114,6 +114,74 @@
     "\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bde2aac-64df-4497-b917-c4903cb67501",
+   "metadata": {},
+   "source": [
+    "Your task:\n",
+    "Review the calculate_discount function.\n",
+    "\n",
+    "Add the example input to your code and try running it.\n",
+    "\n",
+    "Observe the output and identify the bug.\n",
+    "\n",
+    "Fix the bug so the function calculates the discount correctly.\n",
+    "\n",
+    "Tips:\n",
+    "The final discounted price should be lower than the original price.\n",
+    "\n",
+    "Example input:\n",
+    "price = 50\n",
+    "\n",
+    "discount_percentage = 20\n",
+    "\n",
+    "discounted_price = calculate_discount(price, discount_percentage)\n",
+    "\n",
+    "print(discounted_price)\n",
+    "\n",
+    "Expected output:\n",
+    "40.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b4d96cc7-15fd-4cf0-a566-37950e40106f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_discount(price, discount_percentage):\n",
+    "  discount_amount = price * (discount_percentage / 100)\n",
+    "  discounted_price = price - discount_amount\n",
+    "  #discounted_price = price + discount_amount\n",
+    "  return discounted_price\n",
+    "\n",
+    "price = 50\n",
+    "\n",
+    "discount_percentage = 20\n",
+    "\n",
+    "discounted_price = calculate_discount(price, discount_percentage)\n",
+    "\n",
+    "print(discounted_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b3b1e61-0e4e-4d6d-9841-5de2da63ee01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
