--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -386,7 +386,47 @@
    "id": "bdb54ae6-5a77-42c4-a073-3e39b04f1c81",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample DataFrame with missing values\n",
+    "data = {'Name': ['Alice', 'Bob', np.nan, 'David'], \n",
+    "        'Age': [25, 30, np.nan, 35], \n",
+    "        'City': ['New York', np.nan, 'London', 'Paris']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 1. Identifying missing values\n",
+    "print(\"Missing value counts per column:\\n\", df.isnull().sum())\n",
+    "\n",
+    "# 2. Removing missing values (dropna)\n",
+    "df_dropped = df.dropna()\n",
+    "print(\"\\nDataFrame after dropping rows with any missing value:\\n\", df_dropped)\n",
+    "\n",
+    "# 3. Imputing with mean (for numerical columns)\n",
+    "df_filled_mean = df.fillna(df.mean(numeric_only=True))\n",
+    "print(\"\\nDataFrame after filling missing 'Age' with mean:\\n\", df_filled_mean)\n",
+    "\n",
+    "# 3. Imputing with median (for numerical columns)\n",
+    "df_filled_median = df.fillna(df.median(numeric_only=True))\n",
+    "print(\"\\nDataFrame after filling missing 'Age' with median:\\n\", df_filled_median)\n",
+    "\n",
+    "# 4. Handling outliers (demonstration with 'Age')\n",
+    "# Assuming we identify 40 as an outlier based on domain knowledge or visualization\n",
+    "df['Age_capped'] = df['Age'].clip(upper=40)  # Cap values at 28\n",
+    "print(\"\\nDataFrame with 'Age' capped at 40:\\n\", df)\n",
+    "\n",
+    "# 5. Data type conversion\n",
+    "df['Age'] = pd.to_numeric(df['Age'], errors='coerce')  # Convert to numeric, handling errors\n",
+    "print(\"\\nData types after conversion:\\n\", df.dtypes)\n",
+    "\n",
+    "# 6. Exploratory Data Analysis\n",
+    "print(\"\\nDescriptive statistics:\\n\", df.describe())\n",
+    "\n",
+    "# Group by and aggregate\n",
+    "grouped_data = df.groupby('City')['Age'].mean()\n",
+    "print(\"\\nAverage Age by City:\\n\", grouped_data)"
+   ]
   },
   {
    "cell_type": "code",
